--- a/api/package.json
+++ b/api/package.json
@@ -5,5 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "tsnd --transpile-only --ignore-watch --respawn src/server.ts"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "ts-node-dev": "^1.0.0-pre.62",
+    "typescript": "^4.0.2"
   }
 }
