--- a/api/package.json
+++ b/api/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "knex": "^0.21.5",
+    "sqlite3": "^5.0.0"
   },
   "scripts": {
-    "start": "tsnd --transpile-only --ignore-watch --respawn src/server.ts"
+    "start": "tsnd --transpile-only --ignore-watch --respawn src/server.ts",
+    "knex:migrate": "knex --knexfile knexfile.ts migrate:latest"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
